Switched unit tests into separate project.
The classpath issues were getting a little much. It seems a common pattern
for what I'm experiencing is to just separate production code and unit tests
into separate projects.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="new_file">New File on Silence</string>
     <string name="pause_time">Silence Time</string>
     <string name="repository">/sdcard/soundheap/</string>
+    <string name="recordText">Record</string>
 </resources>
