The ActionBarSherlock code now has a faux-ui.
I still need to go through and re-integrate this into everything else.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, PracticeMateActivity!</string>
     <string name="app_name">SoundHeap</string>
-    <string name="record">Record</string>
-    <string name="playback">Playback</string>
-    <string name="projects">Tracks</string>
-    <string name="delete_proj">Erase</string>
-    <string name="send_proj">Send Track</string>
+    <string name="record_title">Record</string>
+    <string name="playback_title">Playback</string>
+    <string name="project_title">Tracks</string>
+    <string name="delete_action">Erase</string>
+    <string name="send_action">Send Track</string>
     <string name="no_intent_to_send">No Program Available</string>
-    <string name="open_proj">Open Track</string>
+    <string name="open_action">Open Track</string>
     <string name="selective_listen">Ignore Silence</string>
     <string name="new_file">New File on Silence</string>
     <string name="pause_time">Silence Time</string>
     <string name="repository">/sdcard/soundheap/</string>
-    <string name="recordText">Record</string>
 </resources>
